fixing week visibility for 6 months overview calendar

--- a/src/sass/calendar/SixMonthsOverview.scss
+++ b/src/sass/calendar/SixMonthsOverview.scss
@@ -12,7 +12,6 @@
     min-width: max-content;
     border-right: 1.5px solid $brown;
     border-left: 1.5px solid $brown;
-    overflow-x: hidden;
     @media only screen and (max-width: $media-XS) {
       border-right: 2.5px solid $brown;
       border-left: none;
